Fix body width overflow

--- a/style.css
+++ b/style.css
@@ -45,7 +45,6 @@
 body {
   padding: 0;
   margin: 0;
-  width: 100vw;
   font-family: "Roboto", sans-serif;
   font-size: var(--large-font);
 }
